<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_home"
        android:icon="@drawable/ic_home"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/home" />
    <item android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_search"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/search"/>
    <item android:id="@+id/menu_item_orders"
        android:icon="@drawable/orders"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/order"/>
    <item android:id="@+id/menu_item_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/profile"/>
</menu>