<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clOrdersMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.OrdersFragment">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlOrdersTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/vpOrders"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbAllOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_orders" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbCancelled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelled" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpOrders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlOrdersTabs" />
</androidx.constraintlayout.widget.ConstraintLayout>